--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
         </nav>
         <div>
             Main Content Area 
+            <p>This is a paragraph inside the Main
+                content area. </p>   
+            <h2>คณะวิทยาศาสตร์</h2>
+            <p>สาขาวิทยาการคอมพิวเตอร์</p>
+            <div> 
+                <h3>ข่าว1</h3>
+                <p>วันที่ dd/mm/yyyy</p>
+            </div>
+            <div> 
+                <h3>ข่าว2</h3>
+                <p>วันที่ dd/mm/yyyy</p>
+            </div>
+            <div> 
+                <h3>ข่าว3</h3>
+                <p>วันที่ dd/mm/yyyy</p>
+            </div>
         </div>
         <footer>
             Footer Area
