--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         </header>
         <nav>
             Navigation Area
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/coontact.html">Contact</a></li>
+                <li><a href="https://www.google.com">Services</a></li>
+            </ul>
         </nav>
         <div>
             Main Content Area 
@@ -20,6 +26,21 @@
                 content area. </p>   
             <h2>คณะวิทยาศาสตร์</h2>
             <p>สาขาวิทยาการคอมพิวเตอร์</p>
+            <img src="image/tree.png" alt="รูปต้นไม้"
+            width="300" height="200">
+            <img src="https://www.craiyon.com/image/AMQe4fnrTUiQ2Oz2N9tzxQ" alt="">
+            <h3>ตารางรายชื่อนนักศึกษา</h3>
+            <table border="1">
+                <tr>
+                    <th>รหัสนนักศึกษา</th>
+                    <th>ชื่อ-นามสกุล</th>
+                    <th>สาขา</th>
+                </tr>
+                <tbody>
+                    <th>รหัสนนักศึกษา</th>
+                    <th>ชื่อ-นามสกุล</th>
+                    <th>สาขา</th>
+                </tbody>
             <div> 
                 <h3>ข่าว1</h3>
                 <p>วันที่ dd/mm/yyyy</p>
